--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lets Upgrade - Mobile Responsive</title>
+    <style>
+      h1 {
+        color: red;
+      }
+      h5 {
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    Mobile Responsive Handson
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
   </body>
 </html>
