comments in html

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
       versions have evolved over the years, sometimes by accident, sometimes on
       purpose (injected humour and the like).
     </p>
+    <!-- <h2>Comment in HTML</h2> -->
   </body>
 </html>
