a tag for links

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
       purpose (injected humour and the like).
     </p>
     <!-- <h2>Comment in HTML</h2> -->
+    <a href="https://www.google.com/">Google</a><br />
+    <a href="https://www.instagram.com/">Instagram</a>
   </body>
 </html>
