img tag with internal css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         background-color: brown;
         color: white;
       }
+      img {
+        height: 300px;
+        width: 300px;
+      }
     </style>
   </head>
   <body>
@@ -35,6 +39,7 @@
     </p>
     <!-- <h2>Comment in HTML</h2> -->
     <a href="https://www.google.com/">Google</a><br />
-    <a href="https://www.instagram.com/">Instagram</a>
+    <a href="https://www.instagram.com/">Instagram</a><br />
+    <img src="image2.jpg" alt="" />
   </body>
 </html>
