--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!-- <h2>Comment in HTML</h2> -->
     <a href="https://www.google.com/">Google</a><br />
     <a href="https://www.instagram.com/">Instagram</a><br />
-    <img src="image2.jpg" alt="" />
+    <img src="image2.jpg" />
+    <img src="./images/image1.jpg" />
+    <a href="https://www.google.com/"> <img src="./images/google.jpg" /> </a>
   </body>
 </html>
