--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
     <a href="https://www.instagram.com/">Instagram</a><br />
     <img src="image2.jpg" />
     <img src="./images/image1.jpg" />
-    <a href="https://www.google.com/"> <img src="./images/google.jpg" /> </a>
+    <a href="https://www.google.com/"> <img src="./images/google.jpg" /> </a
+    ><br />
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>LinkedIn</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Vinoth</td>
+          <td>vincse@gmail.com</td>
+          <td>vinfsd</td>
+        </tr>
+        <tr>
+          <td>Vinoth</td>
+          <td>vincse@gmail.com</td>
+          <td>vinfsd</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
