table with id css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         height: 300px;
         width: 300px;
       }
+      #start {
+        background-color: darkorange;
+      }
+      #end {
+        background-color: darkgreen;
+      }
     </style>
   </head>
   <body>
@@ -44,6 +50,7 @@
     <img src="./images/image1.jpg" />
     <a href="https://www.google.com/"> <img src="./images/google.jpg" /> </a
     ><br />
+    <p id="start">Table Start</p>
     <table>
       <thead>
         <tr>
@@ -65,5 +72,6 @@
         </tr>
       </tbody>
     </table>
+    <p id="end">Table Start</p>
   </body>
 </html>
