--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
       #end {
         background-color: darkgreen;
       }
+      .decorate {
+        background-color: teal;
+      }
     </style>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
+    <h1 class="decorate">Heading 1</h1>
+    <h2 class="decorate">Heading 2</h2>
+    <h3 class="decorate">Heading 3</h3>
+    <h4 class="decorate">Heading 4</h4>
+    <h5 class="decorate">Heading 5</h5>
+    <h6 class="decorate">Heading 6</h6>
     <p>
       It is a long established fact that a reader will be distracted by the
       readable content of a page when looking at its layout. The point of using
