solution for assignment 1

--- a/index.html
+++ b/index.html
@@ -3,78 +3,48 @@
   <head>
     <title>Lets Upgrade - Mobile Responsive</title>
     <style>
-      h1 {
-        color: red;
+     img {
+        height: 100px;
+        width: 100px;
       }
-      h5 {
-        color: blue;
+      table{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 80px;
       }
-      p {
-        background-color: brown;
-        color: white;
-      }
-      img {
-        height: 300px;
-        width: 300px;
-      }
-      #start {
-        background-color: darkorange;
-      }
-      #end {
-        background-color: darkgreen;
-      }
-      .decorate {
-        background-color: teal;
+      h3{
+        color: green;
+        text-align: center;
       }
     </style>
   </head>
   <body>
-    <h1 class="decorate">Heading 1</h1>
-    <h2 class="decorate">Heading 2</h2>
-    <h3 class="decorate">Heading 3</h3>
-    <h4 class="decorate">Heading 4</h4>
-    <h5 class="decorate">Heading 5</h5>
-    <h6 class="decorate">Heading 6</h6>
-    <p>
-      It is a long established fact that a reader will be distracted by the
-      readable content of a page when looking at its layout. The point of using
-      Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-      as opposed to using 'Content here, content here', making it look like
-      readable English. Many desktop publishing packages and web page editors
-      now use Lorem Ipsum as their default model text, and a search for 'lorem
-      ipsum' will uncover many web sites still in their infancy. Various
-      versions have evolved over the years, sometimes by accident, sometimes on
-      purpose (injected humour and the like).
-    </p>
-    <!-- <h2>Comment in HTML</h2> -->
-    <a href="https://www.google.com/">Google</a><br />
-    <a href="https://www.instagram.com/">Instagram</a><br />
-    <img src="image2.jpg" />
-    <img src="./images/image1.jpg" />
-    <a href="https://www.google.com/"> <img src="./images/google.jpg" /> </a
-    ><br />
-    <p id="start">Table Start</p>
+    <h3 >Assignment for Day 1</h3>
     <table>
       <thead>
         <tr>
           <th>Name</th>
           <th>Email</th>
-          <th>LinkedIn</th>
+          <th>Profile Picture</th>
         </tr>
+        <tbody>
+          <tr>
+            <td>Vinothkumar S</td>
+            <td>vincse@gmail.com</td>
+            <td>
+              <img src="./images/vinoth.jpg" alt="Vinothkumar">
+            </td>
+          </tr>
+          <tr>
+            <td>Vinothkumar S</td>
+            <td>vincse@gmail.com</td>
+            <td>
+              <img src="./images/vinoth.jpg" alt="Vinothkumar">
+            </td>
+          </tr>
+          
+        </tbody>
       </thead>
-      <tbody>
-        <tr>
-          <td>Vinoth</td>
-          <td>vincse@gmail.com</td>
-          <td>vinfsd</td>
-        </tr>
-        <tr>
-          <td>Vinoth</td>
-          <td>vincse@gmail.com</td>
-          <td>vinfsd</td>
-        </tr>
-      </tbody>
     </table>
-    <p id="end">Table Start</p>
   </body>
 </html>
