--- a/index.html
+++ b/index.html
@@ -1,80 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lets Upgrade - Mobile Responsive</title>
-    <style>
-      h1 {
-        color: red;
-      }
-      h5 {
-        color: blue;
-      }
-      p {
-        background-color: brown;
-        color: white;
-      }
-      img {
-        height: 300px;
-        width: 300px;
-      }
-      #start {
-        background-color: darkorange;
-      }
-      #end {
-        background-color: darkgreen;
-      }
-      .decorate {
-        background-color: teal;
-      }
-    </style>
+    <title>CSS-Lets Upgrade - Mobile Responsive</title>
   </head>
   <body>
-    <h1 class="decorate">Heading 1</h1>
-    <h2 class="decorate">Heading 2</h2>
-    <h3 class="decorate">Heading 3</h3>
-    <h4 class="decorate">Heading 4</h4>
-    <h5 class="decorate">Heading 5</h5>
-    <h6 class="decorate">Heading 6</h6>
-    <p>
-      It is a long established fact that a reader will be distracted by the
-      readable content of a page when looking at its layout. The point of using
-      Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-      as opposed to using 'Content here, content here', making it look like
-      readable English. Many desktop publishing packages and web page editors
-      now use Lorem Ipsum as their default model text, and a search for 'lorem
-      ipsum' will uncover many web sites still in their infancy. Various
-      versions have evolved over the years, sometimes by accident, sometimes on
-      purpose (injected humour and the like).
-    </p>
-    <!-- <h2>Comment in HTML</h2> -->
-    <a href="https://www.google.com/">Google</a><br />
-    <a href="https://www.instagram.com/">Instagram</a><br />
-    <img src="image2.jpg" />
-    <img src="./images/image1.jpg" />
-    <a href="https://www.google.com/"> <img src="./images/google.jpg" /> </a
-    ><br />
-    <p id="start">Table Start</p>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Email</th>
-          <th>LinkedIn</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Vinoth</td>
-          <td>vincse@gmail.com</td>
-          <td>vinfsd</td>
-        </tr>
-        <tr>
-          <td>Vinoth</td>
-          <td>vincse@gmail.com</td>
-          <td>vinfsd</td>
-        </tr>
-      </tbody>
-    </table>
-    <p id="end">Table Start</p>
+    <p>CSS Handson</p>
   </body>
 </html>
