--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>CSS-Lets Upgrade - Mobile Responsive</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>CSS Handson</p>
+    <p class="para">CSS Handson</p>
   </body>
 </html>
