margin and padding

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p class="para">CSS Handson</p>
+    <p class="para">Para 1</p>
+    <p class="para2">Para 2</p>
   </body>
 </html>
