link with target attr

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <p class="para">Para 1</p>
     <p class="para2">Para 2</p>
+    <a href="https://google.com/" target="_blank">Google</a>
   </body>
 </html>
