psedo classes for links

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <p class="para">Para 1</p>
     <p class="para2">Para 2</p>
     <a href="https://google.com/" target="_blank">Google</a>
+    <a href="https://github.com/" target="_blank">github</a>
+    <a href="https://facebook.com/" target="_blank">facebook</a>
+    <a href="https://instagram.com/" target="_blank">instagram</a>
   </body>
 </html>
