--- a/index.html
+++ b/index.html
@@ -1,15 +1,103 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS-Lets Upgrade - Mobile Responsive</title>
+    <title>Assignment 2 - Blog page</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <style>
+      h3 {
+        color: green;
+        text-align: center;
+      }
+      img {
+        height: 360px;
+        width: 800px;
+        object-fit: contain;
+        margin-top: 20px;
+        margin-left: 220px;
+      }
+      .blog_content {
+        text-align: justify;
+        padding: 10px;
+        font-weight: 600;
+      }
+      .comment {
+        color: blue;
+      }
+      .comment__text {
+        color: green;
+      }
+      #comment_box {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+      textarea {
+        width: 100%;
+      }
+      #btn_submit {
+        background-color: green;
+        border: none;
+        color: white;
+        cursor: pointer;
+        padding: 8px;
+        margin-bottom: 8px;
+      }
+      #btn_clear {
+        background-color: teal;
+        border: none;
+        color: white;
+        cursor: pointer;
+        padding: 8px;
+        margin-bottom: 8px;
+      }
+      #btn_submit:hover {
+        background-color: lightgreen;
+        color: black;
+      }
+      #btn_clear:hover {
+        background-color: lightslategray;
+        color: black;
+      }
+    </style>
   </head>
   <body>
-    <p class="para">Para 1</p>
-    <p class="para2">Para 2</p>
-    <a href="https://google.com/" target="_blank">Google</a>
-    <a href="https://github.com/" target="_blank">github</a>
-    <a href="https://facebook.com/" target="_blank">facebook</a>
-    <a href="https://instagram.com/" target="_blank">instagram</a>
+    <h3>Assignment - Day 2</h3>
+    <div style="border: 2px solid gray">
+      <img
+        src="https://www.html5rocks.com/static/demos/svgmobile_fundamentals/images/html5-1920x1200.png"
+        alt="HTML5_image"
+      />
+      <div>
+        <p class="blog_content">
+          HTML5 is a markup language used for structuring and presenting content
+          on the World Wide Web. It is the fifth and last[3] major HTML version
+          that is a World Wide Web Consortium (W3C) recommendation. The current
+          specification is known as the HTML Living Standard. It is maintained
+          by the Web Hypertext Application Technology Working Group (WHATWG), a
+          consortium of the major browser vendors (Apple, Google, Mozilla, and
+          Microsoft). HTML5 was first released in a public-facing form on 22
+          January 2008,[2] with a major update and "W3C Recommendation" status
+          in October 2014.[4][5] Its goals were to improve the language with
+          support for the latest multimedia and other new features; to keep the
+          language both easily readable by humans and consistently understood by
+          computers and devices such as web browsers, parsers, etc., without
+          XHTML's rigidity; and to remain backward-compatible with older
+          software. HTML5 is intended to subsume not only HTML 4 but also XHTML
+          1 and DOM Level 2 HTML.[6]
+        </p>
+      </div>
+      <div style="padding-left: 10px">
+        <h5>
+          <span class="comment">Comment</span>:<span class="comment__text"
+            >Thanks for the info</span
+          >
+        </h5>
+      </div>
+      <div id="comment_box">
+        <p style="font-weight: bold; color: brown">Enter your comment below:</p>
+        <textarea id="w3review" name="w3review" rows="4" cols="50"> </textarea>
+        <button id="btn_submit">Add comment</button>&nbsp;
+        <button id="btn_clear">Clear</button>
+      </div>
+    </div>
   </body>
 </html>
