border box -css for hero section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS-Lets Upgrade - Mobile Responsive</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p class="para">Para 1</p>
-    <p class="para2">Para 2</p>
-    <a href="https://google.com/" target="_blank">Google</a>
-    <a href="https://github.com/" target="_blank">github</a>
-    <a href="https://facebook.com/" target="_blank">facebook</a>
-    <a href="https://instagram.com/" target="_blank">instagram</a>
+    <div class="hero">
+      <h2 class="logo">Portfolio</h2>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Contact</li>
+      </ul>
+      <a href="#" class="btn">Subscribe</a>
+    </div>
   </body>
 </html>
