--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   </head>
   <body>
     <div class="hero">
-      <h2 class="logo">Portfolio</h2>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Projects</li>
-        <li>Contact</li>
-      </ul>
-      <a href="#" class="btn">Subscribe</a>
+      <div class="nav">
+        <h2 class="logo">Portfo<span>lio</span></h2>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="#" class="btn">Subscribe</a>
+      </div>
     </div>
   </body>
 </html>
