--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         </ul>
         <a href="#" class="btn">Subscribe</a>
       </div>
+      <div class="content">
+        <h4>hi, My name is</h4>
+        <h1>Vinothkumar <span>S</span></h1>
+        <h3>Software Developer</h3>
+      </div>
     </div>
   </body>
 </html>
