--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         <h4>hi, My name is</h4>
         <h1>Vinothkumar <span>S</span></h1>
         <h3>Software Developer</h3>
+        <div class="newsletter">
+          <form>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter your email"
+            />
+            <input type="submit" name="submit" value="Submit" />
+          </form>
+        </div>
       </div>
     </div>
   </body>
