--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/7b1040f727.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="hero">
@@ -30,6 +34,12 @@
             />
             <input type="submit" name="submit" value="Submit" />
           </form>
+          <div class="soc_icons">
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-github-square"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
         </div>
       </div>
     </div>
